Update Favorite Album Get